[package]
name = "proyecto1"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20", features = ["full"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
env_logger = "0.9"
log = "0.4"
actix-cors = "0.6"